# clinical-trials-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  llms.txt  pyproject.toml  railway.json  ruff.toml
.github/workflows/: ci.yml  deploy-backend.yml  deploy-frontend.yml
src/clinical_trials_agent/: __init__.py  alembic.ini
src/clinical_trials_agent/agent/: __init__.py  graph.py  guardrails.py  nodes.py  prompts.py  tools.py
src/clinical_trials_agent/alembic/: env.py
src/clinical_trials_agent/alembic/versions/: 001_add_client_id_to_conversations.py
src/clinical_trials_agent/api/: __init__.py  dependencies.py  main.py  rate_limit.py
src/clinical_trials_agent/api/routes/: __init__.py  conversations.py  query.py
src/clinical_trials_agent/config/: __init__.py  settings.py
src/clinical_trials_agent/database/: __init__.py  app_db.py  connection.py
src/clinical_trials_agent/models/: __init__.py  conversation.py
tests/: __init__.py  conftest.py  test_api.py  test_database.py  test_error_codes.py  test_guardrails.py  test_prompts.py  test_settings.py
ui/: .env.example  biome.json  package.json  playwright.config.ts  tailwind.config.ts
ui/app/: globals.css  layout.tsx  page.tsx
ui/components/: ChatInterface.tsx  ConversationSidebar.tsx  ExampleQuestions.tsx  ExportMenu.tsx  MessageBubble.tsx  SettingsDialog.tsx  SqlQueryDisplay.tsx
ui/components/ui/: scroll-area.tsx  tooltip.tsx
ui/e2e/: home.spec.ts
ui/hooks/: useConversation.ts  useStreamingQuery.ts
ui/lib/: api.ts  clientId.ts  settings.ts
ui/types/: index.ts
